[tool.poetry]
name = "generatelists"
version = "0.1.0"
description = "Generates Wordlists in Gurmukhi from English language lists"
authors = ["Your Name <you@example.com>"]
license = "Creative Commons"

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-translate = "^3.10.1"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
mypy = "^1.0.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
